--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,11 +10,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@v3
+     - uses: actions/checkout@v2
      - name: nmp install and build webpack
        run: |
         nmp install
-        nmp build
+        nmp run build
      - uses: actions/upload-artifact@main
        with:
          name: webpack artifacts
@@ -30,7 +30,7 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
    steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - uses: actions/download-artifact@main
       with:
         name: webpack artifacts
