--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,8 +13,8 @@ jobs:
      - uses: actions/checkout@v2
      - name: nmp install and build webpack
        run: |
-        nmp install
-        nmp run build
+        npm install
+        npm run build
      - uses: actions/upload-artifact@main
        with:
          name: webpack artifacts
@@ -39,10 +39,10 @@ jobs:
       uses: actions/setup-node@v2
       with: 
         node-version:  ${{ matrix.node-version }}
-    - name:  nmp install and test
+    - name:  npm install and test
       run: |
-        nmp install
-        nmo test
+        npm install
+        npm test
       env:
         CI: true
       
