--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - uses: actions/checkout@v2
-     - name: nmp install and build webpack
+     - name: npm install and build webpack
        run: |
         npm install
-        npm run build
+        npm build
      - uses: actions/upload-artifact@main
        with:
          name: webpack artifacts
