--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,7 +14,7 @@ jobs:
      - name: npm install and build webpack
        run: |
         npm install
-        npm build
+        npm run build
      - uses: actions/upload-artifact@main
        with:
          name: webpack artifacts
@@ -42,7 +42,7 @@ jobs:
     - name:  npm install and test
       run: |
         npm install
-        npm test
+        npm run test
       env:
         CI: true
       
