--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,26 +24,25 @@ jobs:
    needs: build
    runs-on: ubuntu-latest  
    strategy:
-      matrix:
-        node-version: [12.x, 14.x]
-        os: [ubuntu-latest, windows-latest]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+     matrix:
+       node-version: [12.x, 14.x]
+       os: [ubuntu-latest, windows-latest]
+       # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/download-artifact@main
-      with:
+     - uses: actions/checkout@v2
+     - uses: actions/download-artifact@main
+       with:
         name: webpack artifacts
         path: public
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with: 
-        node-version:  ${{ matrix.node-version }}
-    - name:  npm install and test
-      run: |
-        npm install
-        npm run test
-      env:
+     - name: Use Node.js ${{ matrix.node-version }}
+       uses: actions/setup-node@v2
+       with: 
+         node-version: ${{ matrix.node-version }}
+     - name: npm install and test
+       run: |
+         npm install
+         npm test
+       env:
         CI: true
       
        
