--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,7 +7,7 @@ on: [ push ]
    
 
 jobs:
-  build:
+   build:
     runs-on: ubuntu-latest
     steps:
      - uses: actions/checkout@v2
@@ -18,31 +18,31 @@ jobs:
      - uses: actions/upload-artifact@main
        with:
          name: webpack artifacts
-         path: public/
-         
-  test:
-   needs: build
-   runs-on: ubuntu-latest  
-   strategy:
-     matrix:
-       node-version: [12.x, 14.x]
-       #os: [ubuntu-latest, windows-latest]
-       # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-   steps:
-     - uses: actions/checkout@v2
-     - uses: actions/download-artifact@main
-       with:
-        name: webpack artifacts
-        path: public
-     - name: Use Node.js ${{ matrix.node-version }}
-       uses: actions/setup-node@v2
-       with: 
+         path: public/         
+
+   test:
+    needs: build
+    runs-on: ubuntu-latest  
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
+        os: [ubuntu-latest, windows-latest]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@main
+        with:
+          name: webpack artifacts
+          path: public
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with: 
          node-version: ${{ matrix.node-version }}
-     - name: npm install and test
-       run: |
-         npm install
-         npm test
-       env:
-        CI: true
+      - name: npm install and test
+        run: |
+          npm install
+          npm test
+        env:
+         CI: true
       
        
